Changed API url

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         function displaytopics() {
             console.log(this);
             var topic = $(this).attr("data-name");
-            var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + topic + "&api_key=1ow7bPsvAXT34olt4173SkeDRHJ0dR3l&limit=10";
+            var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + topic + "&api_key=1ow7bPsvAXT34olt4173SkeDRHJ0dR3l&limit=10";
 
             $.ajax({
                 url: queryURL,
